polybar: modules brightness

--- a/.config/openbox/polybar/xea/modules.ini
+++ b/.config/openbox/polybar/xea/modules.ini
@@ -99,12 +99,18 @@ content-prefix-foreground = ${color.AC}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/backlight]
-type = internal/xbacklight
+[module/brightnessctl]
+type = internal/brightnessctl
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
-card = intel_backlight
+card = ${system.graphics_card}
+
+enable-scroll = true
+
+scroll-up = exec ~/scripts/brightnessctl --inc
+scroll-down = exec ~/scripts/brightnessctl --dec
+interval = 0.5
 
 ; Available tags:
 ;   <label> (default)
